--- a/styles/scss/test.scss
+++ b/styles/scss/test.scss
@@ -1,5 +1,11 @@
+*{
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
+}
+
 body{
-    h1{
-        color: green;
+    section{
+        height:100vh;
     }
 }
