--- a/styles/scss/test.scss
+++ b/styles/scss/test.scss
@@ -5,6 +5,37 @@
 }
 
 body{
+    font-family: 'Inter', sans-serif;
+
+    header{
+        position: fixed;
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 35px;
+
+        .logo{
+
+        }
+
+        nav{
+            .nav-list{
+                list-style-type: none;
+                .nav-item{
+                    display: inline-block;
+                    padding: 0 10px;
+                    text-transform: uppercase;
+                    cursor: pointer;
+
+                    &.active{
+                        font-weight: 700;
+                    }
+                }
+            }
+        }
+    }
+
     section{
         height:100vh;
     }
