--- a/styles/scss/test.scss
+++ b/styles/scss/test.scss
@@ -5,7 +5,9 @@
 }
 
 body{
+        scroll-snap-type: y mandatory;
     section{
+        scroll-snap-align: start;
         height:100vh;
     }
 }
