--- a/styles/scss/test.scss
+++ b/styles/scss/test.scss
@@ -15,7 +15,7 @@ body{
         width: 100%;
         justify-content: space-between;
         align-items: center;
-        padding: 15px 35px;
+        padding: 25px 35px;
 
         .logo{
 
@@ -24,11 +24,23 @@ body{
         nav{
             .nav-list{
                 list-style-type: none;
+                display: flex;
+                align-items: center;
                 .nav-item{
                     display: inline-block;
-                    padding: 0 10px;
+                    margin: 0 10px;
                     text-transform: uppercase;
                     cursor: pointer;
+
+                    &.search{
+                        display: flex;
+                        align-items: center;
+
+                        img{
+                            width: 24px;
+                            height: 24px;
+                        }
+                    }
 
                     &.active{
                         font-weight: 700;
