--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -16,6 +16,7 @@ body{
         justify-content: space-between;
         align-items: center;
         padding: 25px 35px;
+        z-index: 2;
 
         .logo{
 
@@ -54,13 +55,68 @@ body{
         scroll-snap-align: start;
         height:100vh;
 
+        &.hero{
+            position: relative;
+            .hero-img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+
+            .hero-meta{
+                position: absolute;
+                top: 50%;
+                left: 40px;
+                transform: translate(0, -50%);
+
+                .hero-title{
+                    font-size: 60px;
+
+                    .hero-normal{
+                        font-weight: normal;
+                    }
+
+                    .hero-bold{
+                        font-weight: bold;
+                    }
+                }
+            }
+
+            .down-button{
+                position: absolute;
+                bottom: 60px;
+                left: calc(50% - 25px);
+                background-image: url("/public/img/down-btn.svg");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                width: 50px;
+                height: 50px;
+                cursor: pointer;
+            }
+        }
+
+        &.info{
+            display:grid;
+            grid-template-areas: 'img1 bigText bigText''img2 info1 info2';
+            grid-auto-columns: auto 1fr 1fr;
+            align-items: center;
+            img:last-of-type{
+                grid-area:img2;
+            }
+            h3 {
+                grid-area: bigText;
+            }
+        }
+
         &.three-split{
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             grid-template-rows: 1fr;
 
             .split{
-                height: 100%;
+                height: 100vh;
                 position: relative;
 
                 .split-title{
@@ -81,19 +137,10 @@ body{
 
                 img{
                     width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
                 }
-            }
-        }
-        &.info{
-            display:grid;
-            grid-template-areas: 'img1 bigText bigText''img2 info1 info2';
-            grid-auto-columns: auto 1fr 1fr;
-            align-items: center;
-            img:last-of-type{
-                grid-area:img2;
-            }
-            h3 {
-                grid-area: bigText;
             }
         }
     }
