Fixed header background on scroll

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior:smooth
+}
+
 body{
 
     scroll-snap-type: y mandatory;
@@ -17,6 +21,28 @@ body{
         align-items: center;
         padding: 25px 35px;
         z-index: 2;
+        transition: all .3s linear;
+
+        .search{
+            display: inline-block;
+        }
+
+        .search-white{
+            display: none;
+        }
+
+        &.scrolled{
+            background: rgba(0,0,0, .6);
+            color: white;
+
+            .search{
+                display: none;
+            }
+    
+            .search-white{
+                display: inline-block;
+            }
+        }
 
         .logo{
 
@@ -80,6 +106,15 @@ body{
                     .hero-bold{
                         font-weight: bold;
                     }
+                }
+
+                .hero-button{
+                    font-size: 20px;
+                    padding: 6px 84px;
+                    border: none;
+                    background-color: white;
+                    margin-top: 40px;
+                    cursor: pointer;
                 }
             }
 
