--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -173,5 +173,34 @@ body{
                 }
             }
         }
+
+        &.two-split{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .grid-container{
+                display: grid;
+                grid-template-columns: repeat(2, minmax(min-content, max-content));
+                grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
+                grid-column-gap: 45px;
+                grid-row-gap: 50px;
+                padding: 80px;
+                    
+                .grid-first { grid-area: 1 / 1 / 2 / 3; }
+                .grid-second { grid-area: 2 / 1 / 3 / 2; }
+                .grid-third { grid-area: 2 / 2 / 3 / 3; }
+
+                .title{
+                    display: flex;
+                    align-items: end;
+
+                    h3{
+                        font-size: 57px;
+                        font-weight: normal;
+                    }
+                }
+            }
+        }
     }
 }
