--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -67,11 +67,16 @@ body{
 
     section{
         scroll-snap-align: start;
-        height:100vh;
-        max-height: 100vh;
+        min-height:100vh;
+        //max-height: 100vh;
 
         &.hero{
             position: relative;
+            background-image: url("https://via.placeholder.com/2400x1600");
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+
             .hero-img{
                 width: 100%;
                 height: 100%;
@@ -85,6 +90,8 @@ body{
                 left: 40px;
                 transform: translate(0, -50%);
                 color: white;
+                font-family: "Broadway";
+                text-transform: uppercase;
 
                 .hero-title{
                     font-size: 60px;
@@ -132,7 +139,8 @@ body{
                 grid-auto-columns: auto 1fr 1fr;
                 align-items: center;
                 gap:1em;
-                padding: 1em;
+                column-gap: 50px;
+                padding: 80px 67px;
                 background-color: blue;
                 img:last-of-type{
                     grid-area:img2;
@@ -140,6 +148,16 @@ body{
                 h3 {
                     grid-area: bigText;
                     font-size: 3em;
+                }
+
+                .info-text-container{
+                    width: 100%;
+                    height: 100%;
+                    padding-top: 10px;
+                    border-top: 1px solid black;
+                    .info-text{
+
+                    }
                 }
             }
         }
@@ -195,6 +213,12 @@ body{
                 .grid-second { grid-area: 2 / 1 / 3 / 2; }
                 .grid-third { grid-area: 2 / 2 / 3 / 3; }
 
+                .grid-image{
+                    img{
+                        width: 100%;
+                    }
+                }
+
                 .title{
                     display: flex;
                     align-items: end;
@@ -204,6 +228,36 @@ body{
                         font-weight: normal;
                     }
                 }
+            }
+        }
+
+        &.half-split{
+            display: flex;
+            flex-direction: row;
+            div{
+                width: 50%;
+                background-color: black;
+
+                .split-img{
+                    width: 100%;
+                    height: 100%;
+                }
+
+                p{
+                    font-size: 120px;
+                    padding: 40px;
+                    color: white;
+                }
+            }
+        }
+
+        &.image-slider{
+            padding: 0 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                width: 100%;
             }
         }
     }
