--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -22,7 +22,7 @@ body{
         width: 100%;
         justify-content: space-between;
         align-items: center;
-        padding: 25px 35px;
+        padding: 10px 35px;
         z-index: 2;
         transition: all .3s linear;
         color: white;
@@ -232,6 +232,7 @@ body{
                 .split-img{
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
                 }
 
                 p{
