--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -34,6 +34,10 @@ body{
             font-family: "Broadway";
             text-transform: uppercase;
             font-size: 45px;
+
+            img{
+                height: 50px;
+            }
         }
 
         nav{
