Fixed logo sizing

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -34,9 +34,10 @@ body{
             font-family: "Broadway";
             text-transform: uppercase;
             font-size: 45px;
+            display: flex;
 
             img{
-                height: 50px;
+                height: 45px;
             }
         }
 
