--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -15,6 +15,14 @@ body{
     scroll-snap-type: y mandatory;
     font-family: 'Open Sans', 'Inter', sans-serif;
 
+    &.visible{
+        .mobile-nav-container{
+            display: flex;
+        }
+
+        position: fixed;
+    }
+
     header{
         position: fixed;
         display: flex;
@@ -42,7 +50,47 @@ body{
         }
 
         nav{
-            .nav-list{
+            .hamburger{
+                display: none;
+            }
+
+            .mobile-nav-container{
+                display: none;
+                justify-content: center;
+                align-items: center;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: rgba(0,0,0, .6);
+                z-index: 999;
+
+                .mobile-nav{
+                    flex-direction: column;
+
+                    .nav-item{
+                        list-style-type: none;
+                        padding: 20px 0;
+                        font-size: 31px;
+                    }
+                }
+
+                .mobile-nav-close{
+                    position: fixed;
+                    top: 24px;
+                    right: 24px;
+                    cursor: pointer;
+                    color: white;
+                    img{
+                        width: 48px;
+                        height: 48px;
+                        color: white;
+                    }
+                }
+            }
+
+            .nav-list, .mobile-nav{
                 list-style-type: none;
                 display: flex;
                 align-items: center;
@@ -231,6 +279,7 @@ body{
                     left: 60px;
                     font-size: 32px;
                     font-weight: bold;
+                    padding: 20px;
                 }
 
                 img{
@@ -297,6 +346,7 @@ body{
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    display: block;
                 }
 
                 p{
