--- a/styles/scss/media.scss
+++ b/styles/scss/media.scss
@@ -91,6 +91,14 @@
             display: none !important;
         }
     }
+
+    .image-slider{
+        display: none !important;
+    }
+
+    .down-button{
+        bottom: 10px !important;
+    }
 }
 // #endregion
 // ==END TABLET==
