--- a/styles/scss/media.scss
+++ b/styles/scss/media.scss
@@ -24,6 +24,9 @@
         min-height: unset;
     }
     
+    .big-img{
+        padding: 50px 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
