--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -110,7 +110,7 @@ body{
 
                         .language-box{
                             position: absolute;
-                            color: black;
+                            color: var(--black);
                             background: white;
                             right: 10px;
                             top: 40px;
@@ -177,12 +177,7 @@ body{
                 }
 
                 .hero-button{
-                    font-size: 20px;
-                    padding: 15px 54px;
-                    border: none;
-                    background-color: #70FFD4;
                     margin-top: 30px;
-                    cursor: pointer;
                 }
             }
 
@@ -190,13 +185,23 @@ body{
                 position: absolute;
                 bottom: 60px;
                 left: calc(50% - 25px);
-                background-image: url("/public/img/down-btn.svg");
+                width: 50px;
+                height: 50px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                svg{
+                    width: 25px;
+                    //height: 40px;
+                }
+                /*background-image: url("/public/img/down-btn.svg");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
                 width: 50px;
                 height: 50px;
-                cursor: pointer;
+                cursor: pointer;*/
             }
         }
 
@@ -241,7 +246,7 @@ body{
                     width: 100%;
                     height: 100%;
                     padding-top: 10px;
-                    border-top: 1px solid black;
+                    border-top: 1px solid var(--black);
                     .info-text{
 
                     }
@@ -263,7 +268,8 @@ body{
                     bottom: 50px;
                     left: 60px;
                     font-size: 39px;
-                    font-weight: bold;
+                    font-weight: 600;
+                    color: var(--green);
                 }
 
                 .split-text{
@@ -299,7 +305,7 @@ body{
 
                         p{
                             font-size: 32px;
-                            color: #70FFD4;
+                            color: var(--green);
 
                             img{
                                 height: 21px;
@@ -373,7 +379,7 @@ body{
             flex-direction: row;
             div{
                 width: 50%;
-                background-color: black;
+                background-color: var(--black);
 
                 .split-img{
                     width: 100%;
@@ -418,6 +424,17 @@ body{
 }
 
 .splide__arrow{
-    background: #70FFD4 !important;
+    background: var(--green) !important;
     opacity: 1 !important;
+    border: 1px solid var(--black) !important;
+
+    &:hover{
+        background: var(--black) !important;
+        border-color: var(--green) !important;
+
+        svg{
+            color: var(--green) !important;
+            fill: var(--green) !important;
+        }
+    }
 }
