--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -23,6 +23,14 @@ body{
         //position: fixed;
     }
 
+    &.modal-open{
+        overflow-y: hidden;
+
+        .modal{
+            display: flex;
+        }
+    }
+
     header{
         position: fixed;
         display: flex;
@@ -403,6 +411,88 @@ body{
                 
                 button{
                     cursor: pointer;
+                }
+            }
+        }
+    }
+
+    .modal{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--black);
+        z-index: 9999;
+        color: var(--white);
+        display: none;
+        justify-content: center;
+        align-items: center;
+
+        .back-btn{
+            position: absolute;
+            top: 30px;
+            left: 40px;
+            width: 52px;
+            cursor: pointer;
+
+            svg{
+                width: 32px;
+            }
+        }
+
+        .modal-content{
+            max-width: 650px;
+            .title{
+                font-size: 26px;
+                padding-bottom: 70px;
+            }
+
+            .form{
+                background-color: #111215;
+                border-radius: 20px;
+                padding: 70px;
+                display: flex;
+                justify-content: center;
+
+                form{
+                    display: grid;
+                    grid-template-columns: 100px 300px;
+                    grid-template-rows: 1fr;
+                    align-items: center;
+                    row-gap: 30px;
+
+                    > label{
+                        font-size: 12px;
+                        color: #A9AAAB;
+                        text-transform: uppercase;
+                    }
+                }
+
+                .input{
+                    position: relative;
+                    display: inline-block;
+
+                    label{
+                        font-size: 8px;
+                        color: var(--green);
+                        position: absolute;
+                        top: 5px;
+                        left: 10px;
+                    }
+
+                    input{
+                        background: var(--black);
+                        border: none;
+                        border-bottom: 1px solid var(--green);
+                        color: white;
+                        padding: 20px 10px 10px 10px;
+                        width: 100%;
+                    }
+                }
+
+                button[type="submit"]{
+                    grid-area: 3 / 2 / 4 / 3;
                 }
             }
         }
