--- a/styles/scss/atoms.scss
+++ b/styles/scss/atoms.scss
@@ -17,10 +17,12 @@ button{
     color: var(--black);
     font-size: 20px;
     cursor: pointer;
+    border-radius: 61px;
+    border: 1px solid var(--green);
 
     &:hover{
         background: var(--black);
-        color: var(--green)
+        color: var(--green);
     }
 }
 
