--- a/styles/scss/components/slideshow.scss
+++ b/styles/scss/components/slideshow.scss
@@ -1,5 +1,5 @@
 .image-slider{
-    display: flex;
+    //display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 50px;
