--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -421,6 +421,10 @@ body{
                     height: 100%;
                     object-fit: cover;
                     //display: block;
+
+                    @media screen and (max-width: 850px) {
+                        display: block;
+                    }
                 }
 
                 h2{
