Removed ds_store, added background transition

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -14,6 +14,7 @@ html{
 body{
     //scroll-snap-type: y mandatory;
     font-family: 'Open Sans', sans-serif;
+    transition: background-color .3s linear;
 
     &.dark section.hero .dark-mode p{
         #darkmode-off{
