downbtn display only on mobile

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -228,6 +228,7 @@ body{
             }
 
             .down-button{
+                display:none;
                 position: absolute;
                 bottom: 60px;
                 left: calc(50% - 25px);
