--- a/styles/scss/media.scss
+++ b/styles/scss/media.scss
@@ -117,6 +117,7 @@
 
             .down-button{
                 bottom: 10px;
+                display: inline-block;
             }
         }
     }
