--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -248,6 +248,7 @@ body{
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            overflow: hidden;
 
             .hero-img{
                 width: 100%;
@@ -260,9 +261,9 @@ body{
                 position: absolute;
                 top: 50%;
                 left: 40px;
-                transform: translate(0, -50%);
+                transform: translate(0, -35%);
                 color: white;
-                text-transform: uppercase;
+                //text-transform: uppercase;
 
                 .hero-title{
                     font-size: 60px;
@@ -270,11 +271,16 @@ body{
                 }
 
                 .hero-text{
-                    padding-top: 20px;
+                    //padding-top: 20px;
+                    line-height: 30px;
+                    font-weight: 300;
+                    letter-spacing: 3%;
+                    font-size: 20px;
                 }
 
                 .hero-button{
                     margin-top: 30px;
+                    margin-bottom: 40px;
                 }
             }
 
@@ -299,6 +305,13 @@ body{
                 width: 50px;
                 height: 50px;
                 cursor: pointer;*/
+            }
+
+            .text-container{
+                background: rgba(0,0,0,.6);
+                width: max-content;
+                padding: 50px;
+                margin-top: 60px;
             }
         }
 
