--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -20,7 +20,7 @@ body{
         display: inline-block;
         position: absolute;
         bottom: 20px;
-        right: 20px;
+        right: 63px;
 
         p{
             display: flex;
@@ -74,6 +74,12 @@ body{
 
         #darkmode-on{
             display: inline-block;
+        }
+    }
+
+    &.dark{
+        .dot{
+            stroke: var(--green);
         }
     }
 
@@ -448,6 +454,10 @@ body{
             .slideshow-container{
                 padding: 40px 0 40px 60px;
             }
+
+            h2{
+                padding-left: 55px;
+            }
         }
 
         &.two-split{
@@ -486,33 +496,45 @@ body{
         }
 
         &.half-split{
-            display: flex;
-            flex-direction: row;
-            div{
-                width: 50%;
-                background-color: var(--black);
+            h2{
+                padding-left: 55px;
+                padding-bottom: 35px
+            }
+            .half-split-container{
+                display: flex;
+                flex-direction: row;
+                
+                div{
+                    width: 50%;
+                    background-color: var(--black);
 
-                .split-img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    //display: block;
+                    .split-img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        //display: block;
 
-                    @media screen and (max-width: 850px) {
-                        display: block;
+                        @media screen and (max-width: 850px) {
+                            display: block;
+                        }
                     }
-                }
 
-                h2{
-                    font-size: 56px;
-                    font-weight: 600;
-                    padding: 40px;
-                }
+                    h2{
+                        font-size: 56px;
+                        padding: 40px;
+                    }
 
-                p{
-                    font-size: 20px;
-                    padding: 0 40px 40px 40px;
-                    font-weight: 300;
+                    p{
+                        font-size: 20px;
+                        padding: 0 40px 40px 40px;
+                        font-weight: 300;
+                        line-height: 40px;
+                    }
+
+                    button{
+                        margin-left: 40px;
+                        padding: 14px 70px;
+                    }
                 }
             }
         }
@@ -649,15 +671,32 @@ body{
 
     footer{
         background: black;
-        height: 100vh;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
+        padding-bottom: 140px;
+        padding-top: 140px;
 
-        h1{
-            font-weight: bold;
-            font-size: 40px;
-            color: white;
+        @media screen and (max-width: 600px){
+            flex-direction: column;
+            gap: 40px;
+        }
+
+        .footer-content{
+            &.copy{
+
+            }
+
+            &.social{
+                display: flex;
+                gap: 20px;
+            }
+
+            a{
+                color: var(--white);
+                text-decoration: none;
+                font-weight: 300;
+            }
         }
     }
 }
