--- a/styles/scss/media.scss
+++ b/styles/scss/media.scss
@@ -92,7 +92,19 @@
     }
 }
 
-@media screen and (max-width: 920px) {
+@media screen and (max-width: 900px) {
+    html{
+        body{
+            section{
+                &.half-split{
+                    h2{
+                        padding-left: 0;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 730px) {
