--- a/styles/scss/media.scss
+++ b/styles/scss/media.scss
@@ -77,6 +77,7 @@
             &.hero {
                 .hero-meta {
                     left:0;
+                    top:50%;
                     width: 100%;
                     max-width: 100%;
                     height: 100%;
