--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -348,11 +348,13 @@ body{
 
                 .info-title{
                     font-weight: 300;
+                    place-self: start;
+                    font-size: 56px;
                 }
 
                 img{
-                    width: 470px; //TODO: UPDATE
-                    height: 470px;
+                    width: 400px; //TODO: UPDATE
+                    height: 400px;
                     object-fit: cover;
                     grid-area: img1;
                 }
@@ -366,7 +368,23 @@ body{
                     width: 100%;
                     height: 100%;
                     padding-top: 10px;
-                    border-top: 1px solid var(--black);
+                    display: flex;
+                    align-items: flex-end;
+
+                    .info-text{
+                        border-top: 1px solid var(--black);
+                        padding-top: 10px;
+                        font-size: 20px;
+
+                        h4{
+                            padding-bottom: 7px;
+                            font-weight: 600;
+                        }
+
+                        p{
+                            font-weight: 300;
+                        }
+                    }
                 }
             }
         }
@@ -379,6 +397,11 @@ body{
             .split{
                 height: 100vh;
                 position: relative;
+                border-right: 1px solid var(--white);
+
+                &:last-of-type{
+                    border: none;
+                }
 
                 .split-title{
                     position: absolute;
@@ -745,5 +768,9 @@ body{
             color: var(--green) !important;
             fill: var(--green) !important;
         }
+    }
+
+    &.splide__arrow--prev{
+        display: none;
     }
 }
