--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -706,6 +706,14 @@ body{
                 }
             }
 
+            &.after-game {
+                display: none;
+
+                span{
+                    color: var(--green);
+                }
+            }
+
             &.form-content{
                 @media screen and (max-width: 850px) {
                     display: none;
