--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -256,6 +256,14 @@ body{
             background-size: cover;
             overflow: hidden;
 
+            video{
+                width: 100%;
+                height: 100%;
+                display: block;
+                object-fit: cover;
+                position: absolute;
+            }
+
             .hero-img{
                 width: 100%;
                 height: 100%;
